--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,10 +4,9 @@
     box-sizing: border-box;
 }
   
- 
 :root {
-    --white: #0d1117;
-    --background: #0d1117;
+    --white: #fff;
+    --background: #f2f3f5;
     --gray-line: #dcdde0;
     --text: #666666;
     --text-highlight: #b3b9ff;
@@ -19,13 +18,13 @@
     --blue-twitter: #2aa9e0;
 }
   
-@media (max-width: 1080px) {
+@media(max-width: 1080px) {
     html {
       font-size: 93.75%;
     }
 }
   
-@media (max-width: 720px) {
+@media(max-width: 720px) {
     html {
       font-size: 87.5%;
     }
@@ -36,8 +35,8 @@ body {
     color: var(--text);
 }
   
-body,input,textarea,button {
-    font: 400 16px "Inter", sans-serif;
+body, input, textarea, button {
+    font: 400 1rem 'Inter', sans-serif;
 }
   
 button {
@@ -48,6 +47,3 @@ a {
     color: inherit;
     text-decoration: none;
 }
-
-
-  
