--- a/src/components/Countdown/styles.module.scss
+++ b/src/components/Countdown/styles.module.scss
@@ -59,11 +59,11 @@
 
     transition: background-color 0.2s;
 
-    :not(:disabled):hover{
+    &:not(:disabled):hover{
         background: var(--blue-dark);
     }
 
-    :disabled{
+    &:disabled{
         background: var(--white);
         color: var(--text);
         cursor: not-allowed;
@@ -74,7 +74,7 @@
     background: var(--white);
     color: var(--title);
 
-    :not(:disabled):hover{
+    &:not(:disabled):hover{
         background: var(--red);
         color: var(--white);
     }
